// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import '$resolve.guardOnlyServer'
import readModel_0 from \\"$resolve.readModel?readModelName=Todos\\"
const readModels = []
readModels.push(readModel_0)
export default readModels
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import '$resolve.guardOnlyServer'
import readModel_0 from \\"$resolve.readModel?readModelName=Todos\\"
import readModel_1 from \\"$resolve.readModel?readModelName=Items\\"
const readModels = []
readModels.push(readModel_0)
readModels.push(readModel_1)
export default readModels
"
`;

exports[`config + process.env works correctly [server] 1`] = `
"
import '$resolve.guardOnlyServer'
import readModel_0 from \\"$resolve.readModel?readModelName=Todos\\"
const readModels = []
readModels.push(readModel_0)
export default readModels
"
`;
